# image-processor

./: BMP.cpp  BMP.h  CMakeLists.txt  CropFilter.cpp  EdgeDetectionFilter.h  GaussianBlurFilter.cpp  GlitchFilter.cpp  GrayscaleFilter.h  Image.cpp  Image.h  LICENSE  NegativeFilter.cpp  NegativeFilter.h  SharpFilter.cpp  SharpFilter.h  readme.md
cmake/: FindCatch.cmake
contrib/catch/: catch.hpp
src/: CLI.cpp  CLI.h  CMakeLists.txt  CropFilter.h  EdgeDetectionFilter.cpp  Filter.cpp  Filter.h  GaussianBlurFilter.h  GlitchFilter.h  GrayscaleFilter.cpp  image_processor.cpp
src/tests/: CLI_tests.cpp  GlitchFilter_tests.cpp  MatrixFilter_tests.cpp
test_script/: test_image_processor.py
tests/: BlurFilter_tests.cpp  CropFilter_tests.cpp  EdgeFilter_tests.cpp  GrayscaleFilter_tests.cpp  Image_tests.cpp  NegativeFilter_tests.cpp  SharpFilter_tests.cpp  Validation_tests.cpp
